Agrega operaciones de Shoppping Cart
